kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: email-service
spec:
  selector:
    app: email-service
  ports:
    - port: 80
      targetPort: 80
